Massive overhaul of assets

--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -33,7 +33,7 @@
     </script>
     <link type="text/css" rel="stylesheet" href="/assets/css/material-components-web.min.css">
     <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
-    <link type="text/css" rel="stylesheet" href="/assets/css/scvo-styles-2.css">
+    <link type="text/css" rel="stylesheet" href="/assets/css/scvo-styles.css">
     <style type="text/css">
     {{{this.css}}}
     </style>
@@ -214,11 +214,7 @@
         </div>
     </scvo-site>
 
-    <!-- <div id="spinner" style="position:fixed; top:0; left:0; right:0; bottom:0; background-color:#fff; z-index:9999; display:flex; align-items:center; justify-content:center; display:none;">
-        <span class="fal fa-spinner-third fa-spin" style="color:#C2185B; font-size:2rem;"></span>
-    </div> -->
-
-    <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
+    <script type="text/javascript" src="/assets/js/material-components-web.min.js"></script>
     <script type="text/javascript" src="/assets/js/headroom.min.js"></script>
     <script type="text/javascript" src="/assets/js/swiper.min.js"></script>
     <script type="text/javascript" id="cookieinfo"
@@ -232,15 +228,6 @@
     	data-cookie="CookieInfoScript"
     	data-text-align="left">
     </script>
-    <script type="text/javascript">
-    {{{javascript}}}
-    </script>
-<!--
-    NGX
-    <script type="text/javascript" src="inline.bundle.js"></script>
-    <script type="text/javascript" src="polyfills.bundle.js"></script>
-    <script type="text/javascript" src="vendor.bundle.js"></script>
-    <script type="text/javascript" src="main.bundle.js"></script>
--->
+    <script type="text/javascript" src="/assets/js/scvo-javascript.js"></script>
 </body>
 </html>
