--- a/functions/test-db/json2/humanrightsdeclaration/templates/layout.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/layout.hbs
@@ -24,9 +24,7 @@
     <meta name="theme-color" content="#00838f">
     <link type="text/css" rel="stylesheet" href="/assets/css/material-components-web.min.css">
     <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
-    <style type="text/css">
-    {{{this.css}}}
-    </style>
+    <link type="text/css" rel="stylesheet" href="/assets/css/humanrightsdeclaration-styles.css">
 </head>
 <body class="{{replace route.params.path '_' ' '}}">
     <scvo-site>
@@ -144,7 +142,7 @@
             </footer>
         </div>
     </scvo-site>
-    <script type="text/javascript" src="/assets/js/material-components-web-min.js"></script>
+    <script type="text/javascript" src="/assets/js/material-components-web.min.js"></script>
     <script type="text/javascript" id="cookieinfo"
     	src="/assets/js/cookieinfo.min.js"
     	data-bg="#1A1A19"
@@ -170,9 +168,6 @@
     try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
     catch(e){window.attachEvent("onload", $buo_f)}
     </script>
-<!--    <script type="text/javascript" src="inline.bundle.js"></script>
-    <script type="text/javascript" src="polyfills.bundle.js"></script>
-    <script type="text/javascript" src="vendor.bundle.js"></script>
-    <script type="text/javascript" src="main.bundle.js"></script>-->
+    <script type="text/javascript" src="/assets/js/humanrightsdeclaration-javascript.js"></script>
 </body>
 </html>
