--- a/functions/test-db/json2/scvo/templates/pages/home.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/home.hbs
@@ -64,34 +64,34 @@
     </div>
 </section>
 
-<section class="featured-content">
-    <div class="featured-background-image" style="padding: 1rem 0; background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/scvo-hp-g2018-banner-gb-1400x400.jpg');">
-        <div class="container-fluid">
-            <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
-                <div class="mdc-layout-grid__inner" style="position: relative;">
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone" style="text-align: center;">
-                        <a href="https://thegathering.scot/">
-                            <img class="header-image" alt="" src="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/g2018-logo-WHITE-DETAIL.png" style="max-width: 100%; height: auto;">
-                        </a>
-                    </div>
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-                        <div class="mdc-card" style="background-color: rgba(0,0,0,0.5);">
-                            <section class="mdc-card__supporting-text" style="padding-top: 1.5rem; line-height: 1.6rem; font-size: 1.3rem;">
-                                The Gathering is the largest free third sector event in the UK, a place for all the amazing people working in the third sector to network, showcase what they do and learn from each other.
-                            </section>
-                            <section class="mdc-card__actions">
-                                <ul>
-                                    <li><a class="mdc-card__action mdc-button" href="https://thegathering.scot/about/">Find out more</a></li>
-                                    <li><a class="mdc-card__action mdc-button" href="https://thegathering.scot/events/">Book to attend</a></li>
-                                </ul>
-                            </section>
-                        </div>
+<div class="featured-background-image" style="padding: 1rem 0; background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/scvo-hp-g2018-banner-gb-1400x400.jpg');">
+    <div class="container-fluid">
+        <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
+            <div class="mdc-layout-grid__inner" style="position: relative;">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone" style="text-align: center;">
+                    <a href="https://thegathering.scot/">
+                        <img class="header-image" alt="" src="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/g2018-logo-WHITE-DETAIL.png" style="max-width: 100%; height: auto;">
+                    </a>
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                    <div class="mdc-card" style="background-color: rgba(0,0,0,0.5);">
+                        <section class="mdc-card__supporting-text" style="padding-top: 1.5rem; line-height: 1.6rem; font-size: 1.3rem; color:white;">
+                            The Gathering is the largest free third sector event in the UK, a place for all the amazing people working in the third sector to network, showcase what they do and learn from each other.
+                        </section>
+                        <section class="mdc-card__actions">
+                            <ul>
+                                <li><a class="mdc-card__action mdc-button" href="https://thegathering.scot/about/">Find out more</a></li>
+                                <li><a class="mdc-card__action mdc-button" href="https://thegathering.scot/events/">Book to attend</a></li>
+                            </ul>
+                        </section>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
+<section class="featured-content">
     <div class="container-fluid">
         <h2>
             Latest blog post
