--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -214,7 +214,7 @@
         </div>
     </scvo-site>
 
-    <script type="text/javascript" src="/assets/js/material-components-web.min.js"></script>
+    <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
     <script type="text/javascript" src="/assets/js/headroom.min.js"></script>
     <script type="text/javascript" src="/assets/js/swiper.min.js"></script>
     <script type="text/javascript" id="cookieinfo"
