--- a/functions/test-db/json2/scvo/templates/pages/page-cjs-landing.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-cjs-landing.hbs
@@ -8,7 +8,7 @@
         <div class="swiper-wrapper">
             <div class="cta-content callout-image saltire swiper-slide">
                 <div class="container-fluid">
-                    <div class="text">
+                    <div class="caption">
                         <p>
                             Over 8000 young people in jobs since 2011
                         </p>
@@ -20,7 +20,7 @@
             </div>
             <div class="cta-content callout-image jobs swiper-slide">
                 <div class="container-fluid">
-                    <div class="text">
+                    <div class="caption">
                         <p>
                             A diverse range of jobs offered
                         </p>
@@ -29,7 +29,7 @@
             </div>
             <div class="cta-content callout-image benefit swiper-slide">
                 <div class="container-fluid">
-                    <div class="text">
+                    <div class="caption">
                         <p>
                             All CJS jobs deliver community benefit
                         </p>
