Moved some files around

--- a/functions/test-db/json2/scvo/templates/pages/home.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/home.hbs
@@ -39,7 +39,7 @@
                     <div class="mdc-layout-grid">
                         <div class="mdc-layout-grid__inner">
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                                <a href="https://thegathering.scot/">The Gathering</a>
+                                <a href="/the-gathering">The Gathering</a>
                             </div>
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                                 <a href="/jobs/community-jobs-scotland/information-for-employers/become-an-employer">Become a CJS employer</a>
@@ -69,8 +69,8 @@
         <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
             <div class="mdc-layout-grid__inner" style="position: relative;">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone" style="text-align: center;">
-                    <a href="https://thegathering.scot/">
-                        <img class="header-image" alt="" src="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/g2018-logo-WHITE-DETAIL.png" style="max-width: 100%; height: auto;">
+                    <a href="/the-gathering">
+                        <img class="header-image" src="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/g2018-logo-WHITE-DETAIL.png" style="max-width: 100%; height: auto;">
                     </a>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
@@ -80,8 +80,8 @@
                         </section>
                         <section class="mdc-card__actions">
                             <ul>
-                                <li><a class="mdc-card__action mdc-button" href="https://thegathering.scot/about/">Find out more</a></li>
-                                <li><a class="mdc-card__action mdc-button" href="https://thegathering.scot/events/">Book to attend</a></li>
+                                <li><a class="mdc-card__action mdc-button" href="/the-gathering">Find out more</a></li>
+                                <li><a class="mdc-card__action mdc-button" href="https://thegathering.scot/events/">Book to attend <span class="far fa-external-link"></span></a></li>
                             </ul>
                         </section>
                     </div>
