--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -228,6 +228,6 @@
     	data-cookie="CookieInfoScript"
     	data-text-align="left">
     </script>
-    <script type="text/javascript" src="/assets/js/scvo-javascript.js"></script>
+    <script type="text/javascript" src="/assets/js/scvo/root.js"></script>
 </body>
 </html>
