--- a/functions/test-db/json2/scvo/templates/pages/page-gathering.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-gathering.hbs
@@ -68,8 +68,9 @@
                 </div>
             </div>
         </div>
-        <div class="swiper-pagination"></div>
+        <!-- <div class="swiper-pagination"></div>
         <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-prev"></div> -->
     </div>
 </div>
+<script src="/assets/js/scvo/gathering-landing.js"></script>
