--- a/functions/test-db/json2/scvo/partials/search-info.hbs
+++ b/functions/test-db/json2/scvo/partials/search-info.hbs
@@ -14,7 +14,7 @@
 <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-            <a href="https://thegathering.scot/">The Gathering</a>
+            <a href="/the-gathering">The Gathering</a>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
             <a ng-reflect-router-link="/jobs/community-jobs-scotland/" href="/jobs/community-jobs-scotland/information-for-employers/become-an-employer">Become a CJS employer</a>
