--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1114,9 +1114,9 @@ figure {
 .mdc-form-field {
     font-size: 1rem;
 }
-.mdc-select {
-    background-image: none;
-}
+// .mdc-select {
+//     background-image: none;
+// }
 .mdc-select,
 .mdc-textfield {
     width: 100%;
