--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -325,13 +325,7 @@ primary-dark: #251032
         background-color: map-get($themeSelected, 'primary-light') !important;
     }
     .mdc-theme--primary-dark-bg.toolbar-nav {
-        background-image: linear-gradient(
-        90deg,
-        map-get($themeSelected, 'primary-dark'),
-        map-get($themeSelected, 'primary-dark') 60%,
-        map-get($themeSelected, 'primary') 120%,
-        map-get($themeSelected, 'primary')
-        );
+        background-image: linear-gradient(90deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15) 60%, rgba(0,0,0,0.1) 120%, rgba(0,0,0,0.1));
     }
     .pagination li:hover,
     .pagination li.current-page:hover,
