Fixed missing head tags

--- a/functions/test-db/json2/humanrightsdeclaration/templates/layout.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/layout.hbs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>The Scotland Declaration on Human Rights</title>
     <base href="/">
+    {{{route.headTags}}}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/icons/apple-icon-60x60.png">
