--- a/functions/test-db/json2/digitalparticipation/templates/layout.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/layout.hbs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <base href="/">
+    {{{route.headTags}}}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="57x57" href="https://storage.googleapis.com/digitalparticipation/images/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="https://storage.googleapis.com/digitalparticipation/images/icons/apple-icon-60x60.png">
