--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -3,6 +3,7 @@
 <head prefix="og: http://ogp.me/ns#">
     <meta charset="utf-8">
     <base href="/">
+    {{{route.headTags}}}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/icons/apple-icon-60x60.png">
@@ -34,9 +35,6 @@
     <link type="text/css" rel="stylesheet" href="/assets/css/material-components-web.min.css">
     <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
     <link type="text/css" rel="stylesheet" href="/assets/css/scvo-styles.css">
-    <style type="text/css">
-    {{{this.css}}}
-    </style>
 </head>
 <body class="mdc-theme--site-bg {{#if route.params.path}}{{replace route.params.path '_' ' '}}{{else}}home{{/if}}">
     <scvo-site>
