Fixed bug and improved styling

--- a/functions/test-db/json2/scvo/templates/funding/funding-updates-link-gen.hbs
+++ b/functions/test-db/json2/scvo/templates/funding/funding-updates-link-gen.hbs
@@ -47,4 +47,4 @@
         </div>
     </div>
 </div>
-<script src="/assets/js/scvo/funding-updates-link-gen.hbs"></script>
+<script src="/assets/js/scvo/funding-updates-link-gen.js"></script>
