--- a/functions/test-db/json2/scvo/templates/jobs/goodmoves-job-search.hbs
+++ b/functions/test-db/json2/scvo/templates/jobs/goodmoves-job-search.hbs
@@ -20,7 +20,8 @@
     <div class="container-fluid page-content">
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
-            <li>Jobs</li>
+            <li><a href="/jobs">Jobs</a></li>
+            <li>Search</li>
         </ul>
 
         <h2 class="mdc-card__title mdc-card__title--large">Find Jobs</h2>
@@ -34,6 +35,8 @@
                             <!-- <div class="mdc-textfield__bottom-line"></div> -->
                         </div>
                     </div>
+                </div>
+                <div class="mdc-layout-grid__inner">
                     <div class="mdc-layout-grid__cell">
                         <div class="mdc-form-field">
                             <select class="mdc-select" role="listbox" id="events-role" name="role">
