--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -320,6 +320,9 @@ primary-dark: #251032
     }
     .mdc-theme--background,
     .mdc-theme--site-bg {
+        background-color: map-get($themeFooter, 'primary-dark');
+    }
+    .container-content {
         background-color: #fff;
     }
     .mdc-simple-menu .mdc-list-item:after,
