--- a/functions/test-db/json2/digitalparticipation/templates/sign-up.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/sign-up.hbs
@@ -1,6 +1,6 @@
 <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner title">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5 mdc-layout-grid__cell-12-phone">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5 mdc-layout-grid__cell-4-phone">
             <h1>Sign The Charter &amp; Skill Up for Scotland</h1>
             <p>
                 Joining up is simple. Just sign up using the form below and take a step towards a digitally smarter Scotland. We'll ask you for some details about your organisation (so you'll need to make sure you're authorised to sign on their behalf), then we'll ask what your commitment is going to be. This is something you'll define for yourself: anything your organisation can do to help build basic digital skills, big or small, is important. We won't pass your contact details on to any third parties. Thank you - we really value your support.
@@ -10,13 +10,13 @@
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
             &nbsp;
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5 mdc-layout-grid__cell-12-phone">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-5 mdc-layout-grid__cell-4-phone">
             <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Sign-Charter-RGB-04.png" alt="Sign up illustration" class="responsive-img" />
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
             &nbsp;
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell-4-phone">
             <hr />
         </div>
     </div>
@@ -24,7 +24,7 @@
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
             &nbsp;
         </div>
-        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-4 mdc-layout-grid__cell-12-phone">
+        <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-4 mdc-layout-grid__cell-4-phone">
             <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Eligibility-RGB-04.png" alt="Eligibility illustration" class="responsive-img" />
         </div>
         <div class="mdc-layout-grid__cell hide-on-small-only mdc-layout-grid__cell--span-1">
@@ -43,12 +43,12 @@
             </p>
             <img src="https://storage.googleapis.com/digitalparticipation/images/illustrations/Eligibility-RGB-04.png" alt="Eligibility illustration" class="responsive-img hide-on-med-and-up" />
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell-4-phone">
             <hr />
         </div>
     </div>
     <div class="mdc-layout-grid__inner description">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell-4-phone">
             <a href="/sign-up/form" class="mdc-button mdc-button--raised">Okay, let's get started</a>
             <hr />
         </div>
