--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1736,7 +1736,7 @@ body.the-gathering .page-info,
         margin-bottom: 0;
     }
     .logos {
-        margin-bottom: $spacing-unit*2;
+        padding-bottom: $spacing-unit*2;
         .mdc-layout-grid__cell {
             text-align: center;
             display: flex;
