Bugfix in search

--- a/functions/test-db/json2/goodmoves/layouts/default.hbs
+++ b/functions/test-db/json2/goodmoves/layouts/default.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Scvo</title>
+    <title>goodmoves</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -36,7 +36,7 @@
                 <nav class="mdc-temporary-drawer__drawer">
                     <header class="mdc-temporary-drawer__header">
                         <div class="mdc-temporary-drawer__header-content mdc-theme--primary-bg mdc-theme--text-primary-on-primary">
-                            {{title}} 
+                            {{title}}
                         </div>
                     </header>
                     <nav class="mdc-temporary-drawer__content mdc-list-group">
@@ -57,7 +57,7 @@
 
             <main class="mdc-toolbar-fixed-adjust">
                 <div class="page-content">
-                    <router-outlet>{{{routeHtml}}}</router-outlet>        
+                    <router-outlet>{{{routeHtml}}}</router-outlet>
                 </div>
             </main>
         </div>
