--- a/functions/test-db/json2/scvo/templates/main_search/search.hbs
+++ b/functions/test-db/json2/scvo/templates/main_search/search.hbs
@@ -26,7 +26,7 @@
                         {{#*inline "filter_checkbox"}}
                             <div class="mdc-form-field">
                                 <div class="mdc-checkbox">
-                                    <input type="checkbox" name="type" id="type-{{value}}" 
+                                    <input type="checkbox" name="type" id="type-{{value}}"
                                         value="{{value}}" class="mdc-checkbox__native-control"
                                         {{#if (contains params.query.type value)}}checked{{/if}}>
                                     <div class="mdc-checkbox__background">
@@ -43,10 +43,10 @@
                         {{/inline}}
 
                         <h3>SCVO</h3>
-                        {{>filter_checkbox label="Blog posts" value="scvo-cms-post"}}
+                        {{>filter_checkbox label="Pages" value="scvo-cms-page"}}
+                        {{>filter_checkbox label="Posts" value="scvo-cms-post"}}
                         {{>filter_checkbox label="Evidence Library documents" value="scvo-document-evidence"}}
                         {{>filter_checkbox label="Member organisations" value="scvo-member"}}
-                        {{>filter_checkbox label="Pages" value="scvo-cms-page"}}
                         {{>filter_checkbox label="Staff" value="scvo-staff"}}
                         {{>filter_checkbox label="SCVO Events" value="scvo-event"}}
                         {{>filter_checkbox label="Digital events" value="scvo-event-digital"}}
