--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -2113,7 +2113,10 @@ table.membership-fees {
 }
 
 .search-page {
-    margin: $spacing-unit auto;
+    margin: 0 auto;
+    .mdc-layout-grid {
+        margin: $spacing-unit auto;
+    }
     h3 {
         margin-top: 0;
     }
