Fixed search to not show all when empty

--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -335,7 +335,7 @@ primary-dark: #251032
         background-color: map-get($themeSelected, 'primary-light') !important;
     }
     .mdc-theme--primary-dark-bg.toolbar-nav {
-        background-image: linear-gradient(90deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15) 60%, rgba(0,0,0,0.1) 120%, rgba(0,0,0,0.1));
+        background-image: linear-gradient(90deg, rgba(0,0,0,0.16), rgba(0,0,0,0.16) 60%, rgba(0,0,0,0.08) 120%, rgba(0,0,0,0.08));
     }
     .pagination li:hover,
     .pagination li.current-page:hover,
@@ -1942,11 +1942,15 @@ table.membership-fees {
     }
 }
 .section-events {
+    .mdc-card__media {
+        height: 230px;
+    }
     .scottish-charity-awards .mdc-card__media {
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/header-charity-awards.png');
     }
     .the-gathering .mdc-card__media {
-        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/header-gathering.png');
+        background-size: 150%;
+        background-image: url("https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/headers/THEGATHERING-23.02.17_0028.jpg");
     }
 }
 .grid-info.cjs-footer {
